<resources>
    <string name="app_name">EMHT</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account_label">EMHT</string>
    <string name="device_incompatible">Device is incompatible</string>

    <!-- account preferences -->
    <string name="account_pref_category">EMHT Preferences</string>
    <string name="account_pref_debug_title">Use development server</string>
    <string name="account_pref_debug_summary">Connecting to development server instead of production server</string>
    <string name="account_pref_log_title">Debug Logs</string>
    <string name="account_pref_log_summary">Show debug logs on LogCat</string>
    <string name="account_pref_server_url">Server URL</string>
    <string name="account_pref_server_url_summary">The URL of the server</string>
    <string name="account_pref_dev_server_url">Development server URL</string>
    <string name="account_pref_dev_server_summary">The URL of the development server</string>

    <!-- login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_server_url">Server URL</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_login">This username and/or password is incorrect</string>
    <string name="error_server_unavailable">The server did not respond</string>
    <string name="error_field_required">This field is required</string>
    <string name="default_server_url">http://129.241.105.197:9000</string>
    <string name="login_url_dev">http://10.218.86.177:9000/login</string>
    <string name="login_message">Please login to continue.</string>

    <!-- general fragments -->
    <string name="emptyFragment">Please select alarm first</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="log">Log</string>
    <string name="notes">Notes</string>
    <string name="dismissIncident">Dismiss</string>
    <string name="notesHint">Enter notes here...</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_dismiss">Are you sure you want to dismiss this alarm?</string>

    <!-- alarm types -->
    <string name="safety_alarm">Safety</string>
    <string name="phone_alarm">Phone</string>
    <string name="undefined_alarm">Undefined</string>
    <string name="police_alarm">Police</string>
    <string name="fire_alarm">Fire</string>
    <string name="fall_alarm">Fall</string>
    <string name="elder_alarm">Elder</string>

    <!-- tab fragment -->
    <string name="tabRegistration">Registration</string>
    <string name="tabAssessment">Assessment</string>
    <string name="tabActions">Actions</string>

    <!-- incident fragment -->
    <string name="assignedAlarmsHeader">Alarm queue</string>
    <string name="assignedAlarmsHeader2">Placeholder</string>
    <string name="popup_maps">Start navigation</string>
    <string name="logged_in_as">Logged in as:</string>

    <!-- registration fragment -->
    <string name="callee">Callee</string>
    <string name="patientInformation">Patient information</string>
    <string name="phoneNumber">Phone number:</string>
    <string name="age">Age:</string>
    <string name="address">Address:</string>
    <string name="personalNumber">National identification number:</string>
    <string name="incidentAddress">Address of incident:</string>
    <string name="name">Name:</string>
    <string name="registrationLog">Log:</string>

    <!-- assessment fragment -->
    <string name="nmiLog">NMI log from central</string>
    <string name="nmi">NMI</string>
    <string name="assessmentQuestion1">Is the patient conscious?</string>
    <string name="assessmentQuestion2">Is the patient breathing normally?</string>
    <string name="assessmentQuestion3">Can the patient move?</string>
    <string name="assessmentQuestion4">Can the patient stand up?</string>
    <string name="assessmentQuestion5">Can the patient talk?</string>
    <string name="sensors">Sensors</string>
    <string name="caution">OBS!</string>
    <string name="patient_information_checked">Patient information checked?</string>
    <string name="sensors_checked">Sensors checked?</string>
    <string name="not_answered">Not answered</string>

    <!-- actions fragment -->
    <string name="distressNumber">Distress Number</string>
    <string name="police">Police</string>
    <string name="amk">AMK</string>
    <string name="fireman">Fireman</string>
    <string name="doctor">Doctor</string>
    <string name="mobileCaretaker">Mobile Caretaker</string>
    <string name="alarmCentral">Alarm Central</string>
    <string name="ambulatory">Ambulatory</string>
    <string name="contactPerson">Contact Person</string>
    <string name="callPolice">Call Police</string>
    <string name="callAMK">Call AMK</string>
    <string name="callFireDepartment">Call Fire Department</string>
    <string name="completeIncident">Send to central</string>
    <string name="dialog_approve">Are you sure you want to send the alarm to central?</string>

    <!-- maps fragment -->
    <string name="dialog_select_alarm">Make this alarm your current assignment?</string>
    <string name="map_header">EMHT</string>
    <string name="number_of_alarms">Number of alarms:</string>
    <string name="central_phone_number">91331021</string>
    <string name="dialog_logout">Are you sure you want to logout?</string>

    <!-- GCM -->
    <string name="gcm_new_alarm">New alarm</string>

</resources>
